--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-target/
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.class
+*.svn
+.svn
+.project
+.classpath
+*.jardesc
+*.jar
+/target/
+*.prefs
+*.sw?
+/bin
+/docs
+/.idea/
+*.iml
+dependency-reduced-pom.xml
