--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -44,6 +44,7 @@
     </dependencies>
 
     <build>
+        <defaultGoal>-U clean package source:jar install</defaultGoal>
         <resources>
             <resource>
                 <directory>../assets</directory>
