--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,7 +21,7 @@
     </dependencies>
 
     <build>
-        <defaultGoal>-U clean package source:jar install</defaultGoal>
+        <defaultGoal>clean package source:jar install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
