--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </repositories>
 
     <build>
-        <defaultGoal>-U clean package source:jar install</defaultGoal>
+        <defaultGoal>clean package source:jar install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
