--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,7 +6,7 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="6" android:targetSdkVersion="11"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name="MainActivity"
+        <activity android:name="net.larry1123.elec.phantasm.android.MainActivity"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                   android:configChanges="keyboard|keyboardHidden|orientation">
