--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <name>Main Parent</name>
 
     <properties>
-        <gdx.version>0.9.9-SNAPSHOT</gdx.version>
+        <gdx.version>1.0.0</gdx.version>
         <android.version>4.1.1.4</android.version>
         <android.maven.version>3.6.0</android.maven.version>
         <gwt.version>2.5.0</gwt.version>
@@ -77,7 +77,7 @@
             <dependency>
                 <groupId>net.larry1123</groupId>
                 <artifactId>EEUtils</artifactId>
-                <version>1.1.1-SNAPSHOT</version>
+                <version>1.3.0-SNAPSHOT</version>
                 <scope>compile</scope>
             </dependency>
         </dependencies>
