--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>net.larry1123.elecentertainment</groupId>
+        <groupId>net.larry1123.elec</groupId>
         <artifactId>Phantasm</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
