--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="net.larry1123.elecentertainment.phantasm.android"
+          package="net.larry1123.elec.phantasm.android"
           android:screenOrientation="landscape"
           android:versionCode="1"
           android:versionName="1.0">
